2021-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* inst/include/tidy/protect.h (Protect): Assign nullptr in dtor

2021-09-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.5

2021-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidy/protect.h (class Protect): Enable the default
	copy and move assignment and constructor

	* inst/include/tidy/numvec.h (class NumVec): Protect for data object

2021-09-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.4

2021-08-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* vignettes/motivation.Rmd (vignette): Add new section with
	rollMinMax, add floating table of contents

	* inst/include/tidy/numvec.h: Additional comments

2021-08-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/snippets/rollminmaxClass.cpp: Remove class now in numvec.h

2021-08-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidy/numvec.h: Add simplest possible C++ vector class
	* inst/include/tidyCpp: Include vector class

2021-08-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/snippets/rollminmaxClass.cpp: New variant wrapping a simple
	class around the lean and tidy numeric vector data (later removed)

2021-08-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/snippets/rollminmaxExample.cpp: Add commit and repo reference

2021-08-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/snippets/rollminmaxExample.cpp: New snippet, taken from another
	package which used to have a simple Rcpp function we can make simpler

2021-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Add to DESCRIPTION

2021-03-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

	* inst/include/tidy/internals.h: Nil object define protected

	* .Rbuildignore: Add .travis.yml

2021-01-21  Dirk Eddelbuettel  <edd@debian.org>
