@@ -8,8 +8,8 @@ Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Core parts of the C API of R are wrapped in a C++ namespace via a set
  of inline functions giving a tidier representation of the underlying data structures
  and functionality using a header-only implementation without additional dependencies.
-Suggests: Rcpp, knitr, rmarkdown, minidown, RcppSpdlog
-VignetteBuilder: knitr
+Suggests: Rcpp, RcppSpdlog, simplermarkdown
+VignetteBuilder: simplermarkdown
 License: GPL (>= 2)
 URL: https://github.com/eddelbuettel/tidycpp, https://dirk.eddelbuettel.com/code/tidycpp.html
 BugReports: https://github.com/eddelbuettel/tidycpp/issues
