@@ -1,3 +1,9 @@
+2021-11-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* vignettes/motivation.md: Switch to simplermarkdown
+	* DESCRIPTION: Idem
+	* vignettes/water.css: Added
+
 2021-10-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version and date
